Adjust media queries for mobile to fix menu alignment.

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 481px) {
-	.body {
+	/*.body {
 		padding-left:40px;
 		padding-right: -15px;
-	}
+	}*/
 	.work-image {
 	  padding-left: 30px;
 	}
