--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,4 +6,11 @@
 		width:100%;
 		padding-left: 10px;
 	}
+	/*.body {
+		padding: 20px 80px 20px 30px;
+	}*/
+	.site-header {
+		padding-right: 90px;
+	}
+
 }
