--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
-.row {
+/*.row {
   width: 100%;
   padding: 0;
-}
+}*/
 .body {
   background: #000000;
   margin: 0;
@@ -42,10 +42,9 @@
   text-align: center;
 }
 #contact {
-  /*margin-left: 0;*/
-  /*float: right;*/
-  width: 20%;
-  text-align: right;
+  float: center;
+  width: 10%;
+  text-align: center;
 }
 #work {
   float: center;
